<resources>
    <string name="app_name">Rifqi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_myself">RIFQI</string>
    <string name="text_apps">APPS</string>
    <string name="text_app_name">RIFQI APPS</string>


    //home
    <string name="text_my_interest">MY INTEREST</string>
    <string name="text_hobby">Hobby</string>
    <string name="text_watching_tv">Watching Film</string>
    <string name="text_playing_games">Playing Games</string>
    <string name="text_listening_to_music">Listening To Music</string>

    <string name="text_makes">Favorite Foods</string>
    <string name="text_rendang">Rendang</string>
    <string name="text_desc_rendang">One of Indonesian dishes which is famous for its deliciousness</string>
    <string name="text_bakso">Bakso</string>
    <string name="text_desc_bakso">A type of meat ball that is commonly found in Indonesian cuisine</string>
    <string name="text_nasgor">Nasi Goreng</string>
    <string name="text_desc_nasgor">Nasi goreng is basically fried rice with Indonesian special spices</string>
    <string name="text_mikes">Favorite Drinks</string>
    <string name="text_avocado">Avocado Juice</string>
    <string name="text_desc_avocado">A rich and silky chilled beverage made of fresh avocado</string>
    <string name="text_coconut">Coconut Water</string>
    <string name="text_desc_coconut">Recognised to be extremely hydrating and a good source of replenishing electrolytes</string>

    <string name="text_dreams">Dreams</string>
    <string name="text_the_dreams">Traveling around the world</string>


    //profile
    <string name="text_user_name">Rifqi Sirojul Muzhoffar</string>
    <string name="text_description">An Informatics Engineering student at the Indonesian Computer University</string>
    <string name="text_contact">Contact</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_the_number">+62 85155239223</string>
    <string name="text_email">Email</string>
    <string name="text_the_email">rmuzhoffar@gmail.com</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_the_instagram">@rfq.sm</string>
    <string name="text_address">Address</string>
    <string name="text_the_address">Bandung, West Java, Indonesia</string>
    <string name="text_about_app">About App</string>
    <string name="description_about">This application is made for the Midterm Examination of Mobile Computing Applications course</string>
    <string name="text_version">v1.0.0</string>

</resources>