<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white2"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="14dp"
            android:textColor="#212121"
            android:text="@string/text_app_name"/>
        <TextView
            android:id="@+id/description_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="12dp"
            android:text="@string/description_about"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_about"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="12dp"
            android:text="@string/text_version"/>

    </LinearLayout>

</RelativeLayout>