<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/navy">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="675dp"
                android:layout_marginTop="200dp"
                android:padding="16dp"
                android:background="@drawable/cornerbox_white">
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <RelativeLayout
                    android:id="@+id/user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="50dp"
                    android:background="@drawable/user_profile"/>

                <RelativeLayout
                    android:id="@+id/profile_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:padding="16dp"
                    android:background="@drawable/white_box">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_user_name"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_name"
                        android:layout_marginTop="16dp"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        android:text="@string/text_description"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/contact_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_container"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:background="@drawable/white_box">

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_contact"/>

                    <RelativeLayout
                        android:id="@+id/parent_phone_number"
                        android:onClick="open_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_below="@id/contact">
                        <ImageView
                            android:id="@+id/icon_call"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_call"/>
                        <TextView
                            android:id="@+id/phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_call"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_phone_number"/>

                        <TextView
                            android:id="@+id/the_phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/phone_number"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_call"
                            android:clickable="false"
                            android:text="@string/text_the_number"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_below="@id/parent_phone_number">
                        <ImageView
                            android:id="@+id/icon_email"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_email"/>
                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_email"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_email"/>
                        <TextView
                            android:id="@+id/the_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_email"
                            android:layout_marginLeft="16dp"
                            android:layout_below="@id/email"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/text_the_email"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_below="@id/parent_email">
                        <ImageView
                            android:id="@+id/icon_instagram"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_instagram"/>
                        <TextView
                            android:id="@+id/instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_instagram"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_instagram"/>
                        <TextView
                            android:id="@+id/the_instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_instagram"
                            android:layout_marginLeft="16dp"
                            android:layout_below="@id/instagram"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/text_the_instagram"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_below="@id/parent_instagram">
                        <ImageView
                            android:id="@+id/icon_address"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_address"/>
                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_address"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_address"/>
                        <TextView
                            android:id="@+id/the_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3sp"
                            android:layout_toRightOf="@id/icon_address"
                            android:layout_marginLeft="16dp"
                            android:layout_below="@id/address"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/text_the_address"/>
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/parent_about_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_container"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="32dp"
                    android:layout_centerHorizontal="true"
                    android:padding="16dp">
                    <TextView
                        android:id="@+id/about_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="14dp"
                        android:text="@string/text_about_app"/>
                    <TextView
                        android:id="@+id/description_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/about_app"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textSize="12dp"
                        android:text="@string/description_about"/>
                    <TextView
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description_about"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textSize="12dp"
                        android:text="@string/text_version"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>