<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/navy">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1000dp"
                android:layout_marginTop="200dp"
                android:padding="16dp"
                android:background="@drawable/cornerbox_white">
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white2"
                    android:text="@string/text_user_name"/>

                <RelativeLayout
                    android:id="@+id/user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:layout_alignParentRight="true"
                    android:elevation="50dp"
                    android:background="@drawable/user_profile"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@+id/user_profile"
                    android:textSize="14sp"
                    android:textColor="@color/white2"
                    android:text="@string/text_description"/>

                <RelativeLayout
                    android:id="@+id/parent_hobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:padding="16dp"
                    android:background="@drawable/white_box">

                    <TextView
                        android:id="@+id/hobby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_hobby"/>

                    <RelativeLayout
                        android:id="@+id/parent_watching_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_grey_box"
                        android:layout_below="@id/hobby">
                        <ImageView
                            android:id="@+id/icon_tv"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_tv"/>
                        <TextView
                            android:id="@+id/watching_film"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14sp"
                            android:layout_toRightOf="@id/icon_tv"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"

                            android:text="@string/text_watching_tv"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_games"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_grey_box"
                        android:layout_below="@id/parent_watching_tv">
                        <ImageView
                            android:id="@+id/icon_games"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_games"/>
                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14sp"
                            android:layout_toRightOf="@id/icon_games"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_playing_games"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_music"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_grey_box"
                        android:layout_below="@id/parent_games">
                        <ImageView
                            android:id="@+id/icon_headset"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_headset"/>
                        <TextView
                            android:id="@+id/listen_music"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14sp"
                            android:layout_toRightOf="@id/icon_headset"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_listening_to_music"/>
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/parent_makes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/parent_hobby"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:background="@drawable/white_box">

                    <TextView
                        android:id="@+id/makes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/text_makes"/>

                    <RelativeLayout
                        android:id="@+id/parent_rendang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_grey_box"
                        android:layout_below="@id/makes">
                        <ImageView
                            android:id="@+id/img_rendang"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_tv"/>
                        <TextView
                            android:id="@+id/rendang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_rendang"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_rendang"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_bakso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_grey_box"
                        android:layout_below="@id/parent_rendang">
                        <ImageView
                            android:id="@+id/img_bakso"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_tv"/>
                        <TextView
                            android:id="@+id/bakso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_bakso"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_bakso"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/parent_nasgor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_grey_box"
                        android:layout_below="@id/parent_bakso">
                        <ImageView
                            android:id="@+id/img_nasgor"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/icon_tv"/>
                        <TextView
                            android:id="@+id/nasgor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/img_nasgor"
                            android:layout_marginLeft="16dp"
                            android:textSize="14sp"
                            android:text="@string/text_nasgor"/>
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>